@@ -2,3 +2,5 @@ Jack Moffitt <jack@icecast.org>
 Michael Smith <msmith@icecast.org>
 oddsock <oddsock@xiph.org>
 Karl Heyes <karl@xiph.org>
+Philipp "ph3-der-loewe" Schafft <lion@lion.leolix.org>
+Thomas B. "dm8tbr" Ruecker <thomas.rucker@tieto.com>
